# multiparty-gc

./: Cargo.toml  LICENSE  README.md  bench.sh
benches/: mybench.rs
circuits/: and2.txt  inv.txt
src/: error.rs  evaluator.rs  lib.rs  main.rs  prep.rs  sharing.rs
src/evaluator/: copz.rs  mod.rs  wrk17.rs
src/garbler/: copz.rs  mod.rs  wrk17.rs
